--- a/package.json
+++ b/package.json
@@ -10,28 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.17.2",
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.7.3",
+    "@astrojs/tailwind": "^5.0.0",
+    "@glidejs/glide": "^3.6.0",
+    "astro": "^3.0.2",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
-    "eslint-plugin-astro": "^0.27.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "typescript": "^5.1.6"
   }
