--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@glidejs/glide": "^3.6.0",
     "astro": "^3.0.2",
+    "sharp": "^0.32.5",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
