--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "@glidejs/glide": "^3.6.0",
+    "@tailwindcss/typography": "^0.5.10",
     "astro": "^3.0.2",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.2"
