--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "astro-app",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^4.1.0",
-    "@astrojs/react": "^4.2.1",
-    "@tailwindcss/vite": "^4.0.3",
-    "@types/canvas-confetti": "^1.9.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "astro": "^5.4.1",
-    "canvas-confetti": "^1.9.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.3"
-  }
+	"name": "astro-app",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/mdx": "^4.1.0",
+		"@astrojs/react": "^4.2.1",
+		"@astrojs/sitemap": "^3.2.1",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@tailwindcss/vite": "^4.0.3",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"astro": "^5.4.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.4.7",
+		"lucide-react": "^0.477.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^4.0.3",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
