--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^4.2.0",
-		"@astrojs/react": "^4.2.1",
-		"@astrojs/sitemap": "^3.2.1",
+		"@astrojs/mdx": "^4.2.6",
+		"@astrojs/react": "^4.2.7",
+		"@astrojs/sitemap": "^3.4.0",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/vite": "^4.0.3",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
-		"astro": "^5.5.2",
+		"astro": "^5.7.13",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.4.7",
 		"lucide-react": "^0.477.0",
 		"react": "^19.0.0",
