--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.1.6"
-  }
+  },
+  "packageManager": "pnpm@10.15.0"
 }
